# Snapshotter

./: .gitignore  PROJECT_STATUS.md  README.md  pyproject.toml  requirements.txt
config/: snapshotter-config.yaml
docs/: ARCHITECTURE.md  CONFIGURATION.md  INSTALLATION.md  RESTORE.md  TROUBLESHOOTING.md  USAGE.md
scripts/: install.sh  lint.sh  setup-cron.sh  test.sh
snapshotter/: __init__.py  __main__.py  config.py  exceptions.py  logger.py  main.py
snapshotter/backups/: __init__.py  base.py  database.py  filesystem.py  prometheus.py
snapshotter/notifiers/: __init__.py  base.py  webhook.py
snapshotter/utils/: __init__.py  checksums.py  compression.py  remote.py  retention.py
tests/: conftest.py  e2e_test.py  test_config.py  test_database.py  test_filesystem.py  test_logger.py  test_prometheus.py  test_remote.py  test_retention.py  test_webhooks.py
